pvc for custom jars